[metadata]
name = shared_infrastructure
version = 1.7.0
description = Reusable or common CDK pieces
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PanKbase-DB/shared-infrastructure
project_urls =
    Bug Tracker = https://github.com/PanKbase-DB/shared-infrastructure/issues

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    aws-cdk-lib>=2.21.0
    constructs>=10.0.0,<11.0.0

[options.extras_require]
test =
    pytest==5.3.2
    pytest-instafail==0.4.2
    pytest-mock==2.0.0
    pytest-cov==2.8.1
    mypy==0.950

[options.packages.find]
where = src

[options.package_data]
shared_infrastructure = py.typed
